- Target release - v-0.22 ----------------------- - [DONE] 350. FIX sudden tag lost bug (it is due to add new recipient feature) - [DONE] 352. Fix HTTP forwarded for header for getting the real user - [DONE] 353. On mobile version restaurant details page "add review" should have "Show reviews" and "add review" - [DONE] 347. Filter nearby restaurants by mobile location if browsed from mobile

--- a/public/stylesheets/fresh/site.mobile.css
+++ b/public/stylesheets/fresh/site.mobile.css
@@ -310,3 +310,26 @@ textarea {
 .bookmark_tools {
   color: #999;
 }
+
+.updates_item  {
+  width: 100%;
+}
+
+.updates_item td {
+  text-align: left;
+}
+
+.updates_item .date {
+  color: #999;
+  font-size: 80%;
+}
+
+.popup_message {
+  background: #daa520;
+  padding: 10px;
+  margin: 0 auto;
+}
+
+.popup_message h1 {
+  border-bottom: 0;
+}
